--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,8 +4,8 @@
 ---
 
 <div class="logo">
-  <svg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Talantongo Logo">
-    <title>Talantongo Logo</title>
+  <svg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Talanton Go Logo">
+    <title>Talanton Go Logo</title>
     <defs>
       <linearGradient id="sunrise-gradient" x1="0%" y1="100%" x2="100%" y2="0%">
         <stop offset="0%" style="stop-color:#FFD700;stop-opacity:1" />
