Removed the phone number section and added a favicon to the title bar

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,7 +2,7 @@
 ---
 
 <div class="logo">
-  <img src="/navigation-logo.png" alt="Talanton Go Logo" width="64" height="64" />
+  <img src="/images/navigation-logo.png" alt="Talanton Go Logo" width="64" height="64" />
 </div>
 
 <style>
