--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -313,12 +313,12 @@ const breadcrumbData = {
               hello@talantongo.com
             </a>
           </div>
-          <div class="contact-item">
+          <!-- <div class="contact-item">
             <h3>Phone</h3>
             <a href="tel:+1234567890" class="contact-link">
               (123) 456-7890
             </a>
-          </div>
+          </div> -->
           <div class="contact-item">
             <h3>Schedule a Meeting</h3>
             <p class="contact-note">Calendar booking coming soon</p>
